# xlsx

./: .gitignore  .pre-commit-config.yaml  README.md  flake.nix  xlsx-fork.cabal  xlsx.cabal
benchmarks/: Main.hs
src/Codec/: Xlsx.hs
src/Codec/Xlsx/: Formatted.hs  Lens.hs  Parser.hs  Types.hs  Writer.hs
src/Codec/Xlsx/Parser/: Internal.hs  Stream.hs
src/Codec/Xlsx/Parser/Internal/: Fast.hs  Memoize.hs  PivotTable.hs  Util.hs
src/Codec/Xlsx/Parser/Stream/: HexpatInternal.hs
src/Codec/Xlsx/Types/: AutoFilter.hs  Cell.hs  Comment.hs  Common.hs  ConditionalFormatting.hs  DataValidation.hs  Drawing.hs  Internal.hs  PageSetup.hs  PivotTable.hs  Protection.hs  RichText.hs  SheetViews.hs  StyleSheet.hs  Table.hs  Variant.hs
src/Codec/Xlsx/Types/Drawing/: Chart.hs  Common.hs
src/Codec/Xlsx/Types/Internal/: CfPair.hs  CommentTable.hs  ContentTypes.hs  CustomProperties.hs  DvPair.hs  FormulaData.hs  Relationships.hs  SharedStringTable.hs
src/Codec/Xlsx/Types/PivotTable/: Internal.hs
src/Codec/Xlsx/Writer/: Internal.hs  Stream.hs
src/Codec/Xlsx/Writer/Internal/: PivotTable.hs  Stream.hs
tests/: AutoFilterTests.hs  Common.hs  CommonTests.hs  CondFmtTests.hs  Diff.hs  DrawingTests.hs  Main.hs  PivotTableTests.hs  StreamTests.hs  TestXlsx.hs
tests/CommonTests/: CellRefTests.hs
tests/Test/SmallCheck/Series/: Instances.hs
