cabal-version:   3.4
name:            xlsx
version:         0.1.0.0
license:
build-type:      Simple
extra-doc-files: CHANGELOG.markdown
data-files:      data/*.xlsx

common shared
  ghc-options:        -Werror -Wall -Wcompat
  default-language:   Haskell2010
  build-depends:
    , base         >=4.13.0.0 && <5.0
    , bytestring
    , conduit
    , containers
    , deepseq
    , lens
    , mtl
    , optics
    , text
    , time
    , vector
    , xml-conduit

  default-extensions: ImportQualifiedPost

library
  import:          shared
  exposed-modules:
    Codec.Xlsx
    Codec.Xlsx.Formatted
    Codec.Xlsx.Lens
    Codec.Xlsx.Parser
    Codec.Xlsx.Parser.Internal
    Codec.Xlsx.Parser.Internal.Fast
    Codec.Xlsx.Parser.Internal.Memoize
    Codec.Xlsx.Parser.Internal.PivotTable
    Codec.Xlsx.Parser.Internal.Util
    Codec.Xlsx.Parser.Stream
    Codec.Xlsx.Parser.Stream.HexpatInternal
    Codec.Xlsx.Types
    Codec.Xlsx.Types.AutoFilter
    Codec.Xlsx.Types.Cell
    Codec.Xlsx.Types.Comment
    Codec.Xlsx.Types.Common
    Codec.Xlsx.Types.ConditionalFormatting
    Codec.Xlsx.Types.DataValidation
    Codec.Xlsx.Types.Drawing
    Codec.Xlsx.Types.Drawing.Chart
    Codec.Xlsx.Types.Drawing.Common
    Codec.Xlsx.Types.Internal
    Codec.Xlsx.Types.Internal.CfPair
    Codec.Xlsx.Types.Internal.CommentTable
    Codec.Xlsx.Types.Internal.ContentTypes
    Codec.Xlsx.Types.Internal.CustomProperties
    Codec.Xlsx.Types.Internal.DvPair
    Codec.Xlsx.Types.Internal.FormulaData
    Codec.Xlsx.Types.Internal.Relationships
    Codec.Xlsx.Types.Internal.SharedStringTable
    Codec.Xlsx.Types.PageSetup
    Codec.Xlsx.Types.PivotTable
    Codec.Xlsx.Types.PivotTable.Internal
    Codec.Xlsx.Types.Protection
    Codec.Xlsx.Types.RichText
    Codec.Xlsx.Types.SheetViews
    Codec.Xlsx.Types.StyleSheet
    Codec.Xlsx.Types.Table
    Codec.Xlsx.Types.Variant
    Codec.Xlsx.Writer
    Codec.Xlsx.Writer.Internal
    Codec.Xlsx.Writer.Internal.PivotTable
    Codec.Xlsx.Writer.Internal.Stream
    Codec.Xlsx.Writer.Stream

  hs-source-dirs:  src
  build-depends:
    , attoparsec
    , base64-bytestring
    , binary-search
    , data-default
    , dlist
    , errors
    , exceptions
    , extra
    , filepath
    , hexpat
    , indexed-traversable
    , microlens
    , microlens-ghc
    , microlens-mtl
    , microlens-platform
    , microlens-th
    , monad-control
    , network-uri
    , old-locale
    , profunctors
    , safe
    , transformers
    , transformers-base
    , xeno
    , xml-conduit
    , xml-types
    , zip
    , zip-archive
    , zip-stream
    , zlib

test-suite xlsx-test
  import:         shared
  type:           exitcode-stdio-1.0
  main-is:        Main.hs
  other-modules:
    AutoFilterTests
    Common
    CommonTests
    CommonTests.CellRefTests
    CondFmtTests
    Diff
    DrawingTests
    PivotTableTests
    StreamTests
    Test.SmallCheck.Series.Instances
    TestXlsx

  hs-source-dirs: tests
  build-depends:
    , Diff
    , groom
    , raw-strings-qq
    , smallcheck
    , tasty
    , tasty-hunit
    , tasty-smallcheck
    , xlsx

benchmark xlsx-bench
  import:         shared
  type:           exitcode-stdio-1.0
  main-is:        Main.hs
  hs-source-dirs: benchmarks
  build-depends:
    , criterion
    , xlsx
